objects/sumoapp__EventResource__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Invite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invite</label>
        <referenceTo>sumoapp__Invite__c</referenceTo>
        <relationshipLabel>Invite Resources</relationshipLabel>
        <relationshipName>InviteResources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>sumoapp__Resource__c</referenceTo>
        <relationshipLabel>Resources</relationshipLabel>
        <relationshipName>Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__SumoEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SUMO Event</label>
        <referenceTo>sumoapp__AdditionalInfo__c</referenceTo>
        <relationshipLabel>Event Resources</relationshipLabel>
        <relationshipName>EventResources</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SUMO Event Resource</label>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>Event Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Event Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>